--- a/modules.html
+++ b/modules.html
@@ -19,21 +19,66 @@
         <h1 class="h1 modules_h1">Модули курса Веб-верстка</h1>
         <div>
             <ul class="m_modules_p">
+<!-- Первая карточка -->
                 <li class="m_modules_ch">
                     <img src="/folder3/img/modules_content1.jpg" alt="f">
                     <div class="card_content">
-                        <h2 class="h2 modules_h2">Введение</h2>
+                        <h2 class="h2 modules_h2">Базовый HTML</h2>
                         <ul class="card_list">
                             <li>Как работают сайты. Верстка</li>
                             <li>Возможности HTML, CSS, JS</li>
                             <li>Редактор кода. Codepen</li>
                             <li>Работа с DevTools</li>
-                        </ul>
+                        </ul>  
                     </div>
+                    <p class="number">01</p>
+                </li>
+<!-- Вторая карточка -->
+                <li class="m_modules_ch">
+                    <img src="/folder3/img/modules_content2.jpg" alt="f">
+                    <div class="card_content">
+                        <h2 class="h2 modules_h2">Введение</h2>
+                        <ul class="card_list">
+                            <li>Базовые теги</li>
+                            <li>Теги картинок и ссылок</li>
+                            <li>Теги таблиц</li>
+                            <li>Служебные теги</li>
+                            <li>Кодстайл HTML</li>
+                        </ul>  
+                    </div>
+                    <p class="number">02</p>
+                </li>
+<!-- Третья карточка -->
+                <li class="m_modules_ch">
+                    <img src="/folder3/img/modules_content3.jpg" alt="f">
+                    <div class="card_content">
+                        <h2 class="h2 modules_h2">Базовый CSS</h2>
+                        <ul class="card_list">
+                            <li>Подключение CSS</li>
+                            <li>Вес селектора</li>
+                            <li>Свойство display</li>
+                            <li>Блочная модель и позиционирование</li>
+                            <li>Кодстайл CSS</li>
+                        </ul>  
+                    </div>
+                    <p class="number">03</p>
+                </li>
+<!-- Четвёртая карточка -->
+                <li class="m_modules_ch">
+                    <img src="/folder3/img/modules_content4.jpg" alt="f">
+                    <div class="card_content">
+                        <h2 class="h2 modules_h2">Работа с макетом</h2>
+                        <ul class="card_list">
+                            <li>Про форматы изображений</li>
+                            <li>Работа с макетом в Photoshop</li>
+                            <li>Работа с макетом в Figma</li>
+                        </ul>  
+                    </div>
+                    <p class="number">04</p>
                 </li>
             </ul>
         </div>
-        <p>g</p>
+        <div><p>gufuib</p></div> 
     </div>
 </body>
 </html>
